<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="anton_ruban.fitz.coach.trainig.TrainingCreationActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/nameEditCreate"
            android:layout_marginTop="10dp"
            android:hint="@string/nameTraining"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/descriptionEditCreate"
            android:layout_marginTop="10dp"
            android:hint="@string/descriptionTraining"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textDateBith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dateChoose"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="0dp"
                android:text="@string/dateChoose"
                />
            <Button
                android:onClick="onClickDateTraining"
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:id="@+id/date_BTN"
                android:padding="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/corner_btn"
                android:layout_height="wrap_content"
                android:text="@string/notSelected" />
        </LinearLayout>

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:onClick="addTrainingFromHistory"
            android:text="@string/historyTraining"
            android:background="@drawable/corner_btn"
            android:textColor="@color/textColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/warmupBTN"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/corner_btn"
                    android:onClick="warmUpPressed"
                    android:text="@string/warmup" />

                <Button
                    android:id="@+id/emomBTN"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/corner_btn"
                    android:onClick="emomPressed"
                    android:text="@string/emom1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/amrap"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:onClick="amrapPressed"
                    android:background="@drawable/corner_btn"
                    android:layout_weight="0.5"
                    android:id="@+id/arpBTN"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/amrap_15"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:onClick="amrap15Pressed"
                    android:background="@drawable/corner_btn"
                    android:layout_weight="0.5"
                    android:id="@+id/arp15BTN"/>
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/trainingExercisesRV"
            android:layout_width="match_parent"
            android:background="@color/colorGrey"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="300dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createTraining"
            android:layout_marginStart="50dp"
            android:onClick="addTraining"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/corner_btn"
            android:id="@+id/createTraining"/>
    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>
