<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darckGRAY"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:textColor="@color/textColor"
        android:layout_marginBottom="32dp"
        app:titleTextColor="@color/textColor"
        app:title="@string/Timers" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/stopwatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/textColor"
        android:background="@color/colorPrimary"
        android:onClick="onClickStopWatch"
        android:drawableRight="@drawable/ic_arrow_right"
        android:text="@string/stopwatch" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/amrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/textColor"
        android:onClick="onClickAmrap"
        android:background="@color/colorPrimary"
        android:drawableRight="@drawable/ic_arrow_right"
        android:text="@string/amrap" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/emom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/textColor"
        android:background="@color/colorPrimary"
        android:onClick="onCLickEmom"
        android:drawableRight="@drawable/ic_arrow_right"
        android:text="@string/emom" />

</LinearLayout>