<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="anton_ruban.fitz.club.view.CreateClubActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/club_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="2dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/nameClub"
                android:textColorHint="@color/textColor">

                <EditText
                    android:id="@+id/clubName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/descriptionClub"
                android:textColorHint="@color/textColor">

                <EditText
                    android:id="@+id/descriptionClub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/selectAddres"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/textColor"
                android:background="@drawable/corner_btn"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="12sp"
                android:text="@string/selectAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/contactsClub"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/emailClub"
                android:textColorHint="@color/textColor">

                <EditText
                    android:id="@+id/emailClub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phoneCLub"
                android:textColorHint="@color/textColor">

                <EditText
                    android:id="@+id/phoneClub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/selectCoach"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerSelectCoach"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="300dp"/>


            <Button
                android:text="@string/saveLinear"
                android:textColor="@color/textColor"
                android:background="@drawable/corner_btn"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:onClick="onClickSaveClub"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
